# arixa-main

./: .cursorrules  README.md  pyproject.toml
.cursor/rules/: arixa-backend.mdc
app/: __init__.py  main.py
app/api/: __init__.py  router.py
app/api/routes/: __init__.py  health.py  intake.py  reports.py  sessions.py
app/core/: __init__.py  config.py
app/db/: __init__.py  models.py  session.py
app/schemas/: __init__.py  analysis.py  capture_session.py  registration.py  session_image.py  symptom_entry.py
app/services/: __init__.py  analysis_service.py  capture_session.py  registration_service.py  session_image.py  symptom_entry.py
app/utils/: __init__.py  quality_checks.py
app/vision/: __init__.py  color_metrics.py  constants.py  face_alignment.py  illumination.py  longitudinal.py  mediapipe_landmarks.py  roi_regions.py  segmentation.py  texture_features.py
tests/: conftest.py  test_color_metrics.py  test_health.py  test_longitudinal.py  test_quality_checks.py  test_registration_series.py  test_roi_regions.py  test_sessions.py  test_texture_features.py
util/: image_splitter.py  registration_series_runner.py
